--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-ui-example",
-  "homepage": "https://Umair Khalid.github.io/chat-ui",
+  "homepage": "https://umairkhalid598.github.io/chat-ui",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
