--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
     "dist"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "bootstrap": "^4.4.1",
     "prop-types": "^15.7.2",
     "styled-components": "^5.1.0"
   }
